# wire-app

./: .gitignore  AGENTS.md  Cargo.toml  README.md  T-019f42f8-ef00-774d-91b8-2e0bc8e835dd.md  TODO.md  bump-version.bat  bump-version.ps1  justfile  notes.txt  package-egui.bat  package-wire-app.bat  release-egui.bat  release-wire-app.bat  run-two-instances.bat  upload-egui.bat  upload-wire-app.bat  wire-chat-rework-ui-mockup.html  wire_chat_mockup.html  wire_voice_call_v2.html  wire_voice_call_v3.html
callme/: Cargo.toml
callme-cli/src/: main.rs
callme-egui/: .gitignore  Cargo.toml
callme-egui/examples/: mf_encoder_probe.rs
callme-egui/src/: app.rs  lib.rs  main.rs  scap_capture.rs  screen_capture.rs  sounds.rs  theme.rs  update.rs  video_decode.rs  win_capture.rs  win_gdi_capture.rs  win_mf_codec.rs  win_mf_d3d.rs  yuv_convert.rs
callme/src/: audio.rs  codec.rs  lib.rs  net.rs
callme/src/audio/: capture.rs  device.rs  playback.rs
callme/src/codec/: opus.rs
callme/src/video/: bitstream.rs  codec.rs  mod.rs  transport.rs
docs/: audio-platform-notes.md  chat-delivery-asymmetry.md  chat-keepalive-sessions.md  chat-offline-queue.md  remote-log-fetch.md  screen-capture-performance.md  why-chat-retries-when-online.md
scripts/: kanbn.lua
wire/: Cargo.toml
wire-app/: Cargo.toml  Info.plist  README.md  build.rs
wire-app/.cargo/: config.toml
wire-app/examples/: mf_encoder_probe.rs
wire-app/src/: app.rs  autostart.rs  chat.rs  client_status.rs  dev_pair.rs  global_hotkeys.rs  lib.rs  main.rs  notifications.rs  resource_monitor.rs  scap_capture.rs  screen_capture.rs  sounds.rs  theme.rs  title_bar.rs  update.rs  video_decode.rs  win_capture.rs  win_gdi_capture.rs  win_mf_codec.rs  win_mf_d3d.rs  win_video_presenter.rs  window_frame.rs  yuv_convert.rs
wire-cli/: Cargo.toml  README.md
wire-cli/src/: main.rs
wire/examples/: echo.rs  playback-record.rs
wire/src/: audio.rs  lib.rs  net.rs  remote_logs.rs  rtc.rs
wire/src/audio/: capture.rs  device.rs  noise_suppression.rs  playback.rs  processor.rs
wire/src/codec/: opus.rs
wire/src/rtc/: protocol_handler.rs  rtp_receiver.rs  rtp_sender.rs  track.rs
wire/src/video/: bitstream.rs  mod.rs  transport.rs
