
[workspace]
resolver = "2"
members = ["wire", "wire-cli", "wire-app"]

[workspace.package]
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/stardive/wire.git"
license = "MIT OR Apache-2.0"

[patch.crates-io]
# make receive flows close on connection close: https://github.com/n0-computer/iroh-roq/pull/4
iroh-roq = { git = "https://github.com/n0-computer/iroh-roq.git", branch = "fix/close-flows" }

# fix android device names: https://github.com/RustAudio/cpal/pull/959
cpal = { git = "https://github.com/Frando/cpal.git", branch = "feat/android-device-name" }

# fix android build: https://github.com/tonarino/webrtc-audio-processing/pull/47
# replace failure with anyhow: https://github.com/tonarino/webrtc-audio-processing/pull/48
webrtc-audio-processing = { git = "https://github.com/Frando/webrtc-audio-processing.git", branch = "callme-dev" }
webrtc-audio-processing-sys = { git = "https://github.com/Frando/webrtc-audio-processing.git", branch = "callme-dev" }

# this is needed for compiling to wasm
# webrtc-util = { git = "https://github.com/Frando/webrtc.git", branch = "fix/util-feature-flags" }