[package]
name = "callme-egui"
version = "0.1.4"
edition = "2021"
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "make voicecalls over iroh (gui app)"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.96"
async-channel = "2.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs = "6"
egui = { version = "0.31.0", default-features = false, features = [
    "color-hex",
] }
egui-phosphor = "0.9"
iroh = { version = "0.33.0", default-features = false }
callme = { version = "0.1.0", path = "../callme", default-features = false }
n0-future = "0.1.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "sync", "io-util"] }
xcap = "0.4"
image = "0.25"
fast_image_resize = { version = "5.1", features = ["image"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
strum = { version = "0.27.1", features = ["derive"] }
zed-scap = { version = "0.0.8-zed", default-features = false }
spin_sleep = "1.3.0"

[target.'cfg(target_os = "android")'.dependencies]
android_clipboard = "0.1.0"
tracing-android = "0.2"
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "android-native-activity",
    "default_fonts",
] }
egui-winit = { version = "0.31", default-features = false, features = [
    "clipboard",
    "links",
] }

[target.'cfg(target_os = "ios")'.dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "accesskit",
    "x11",
    "wayland",
    "glow",
] }
arboard = { version = "3.4.1", features = ["wl-clipboard-rs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
scopeguard = "1.2"
rayon = "1.12"
windows-capture = "1.4.4"

[features]
default = ["audio-processing"]
audio-processing = ["callme/audio-processing"]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.CHANGE_NETWORK_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[package.metadata.bundle]
name = "callme"
identifier = "computer.n0.callme"
