[package]
name = "wire"
version = "0.1.0"
edition = "2021"
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = "1.0.96"
async-channel = "2.3.1"
audio_thread_priority = "0.33.0"
bytes = "1.10.0"
cpal = { version = "0.15.3" }
dasp_sample = "0.11.0"
derive_more = { version = "2.0.1", features = ["debug", "deref"] }
fixed-resample = "0.6.1"
futures-concurrency = "7.6.3"
iroh = { version = "0.33.0", default-features = false }
iroh-roq = "0.1.0"
n0-future = "0.1.2"
# opus = { package = "magnum-opus", version = "0.3" }
opus = { git = "https://github.com/DCNick3/opus-rs.git", branch = "unsafe-libopus", default-features = false, features = [
    "unsafe-libopus-backend",
] }
rand = "0.8"
ringbuf = "0.4.7"
serde = { version = "1.0.218", features = ["derive"] }
spin_sleep = "1.3.0"
tokio = { version = "1.43.0", features = ["sync", "io-util"] }
openh264 = "0.9"
tokio-util = { version = "0.7.13", default-features = false }
tracing = "0.1.41"
webrtc-audio-processing = { version = "0.4.0", optional = true, features = [
    "bundled",
    "derive_serde",
] }
webrtc-media = "0.9.0"

[target.'cfg(target_family = "wasm")'.dependencies]
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
hound = "3.5.1"
testresult = "0.4.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"

[features]
default = ["audio-processing"]
audio-processing = ["webrtc-audio-processing"]